javali_tests/A3/A4_keinestamSchmid/success/Positive.2.3.13.ALLFIELDSEXIST.javali
//POS 2.3.13
//All fields must exist

class Main{
	int y;
	int x;
	void main(){
		x = 10;
		y = x;
	}
}