javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.22.INVALIDRETURN.2.javali
// Test Check valid returntype
// rule 2.3.22

class Main {
	boolean i;
	
	boolean m(){
		return 5;
	}
	
	void main() {
		i = m();

	}
}